--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -15,6 +15,14 @@
     {
       "name": "bubble",
       "value": 2
+    },
+    {
+      "name": "light effect",
+      "value": 4
+    },
+    {
+      "name": "ground",
+      "value": 8
     }
   ]
 }
