--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -4,7 +4,8 @@
     "designResolution": {
       "width": 720,
       "height": 1280,
-      "fitHeight": true
+      "fitHeight": true,
+      "fitWidth": false
     }
   },
   "layer": [
